CrOS shelf: tentative fix for unresponsive shelf

Extend the shelf hover area to the edges of the screen.

Bug: 899007
Change-Id: I344e80c9c2272ec70d5c638646bd9d5f0086f87a
Reviewed-on: https://chromium-review.googlesource.com/c/1318799
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#605714}(cherry picked from commit a499973036579cadebd2aa4a9cdc16b05f381be3 [formerly 61a96a66b2d9e5fb09f23359439804159ed9160d])
Reviewed-on: https://chromium-review.googlesource.com/c/1320206
Reviewed-by: Manu Cornet <manucornet@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#571}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 5fb657a6b0cd4fc7b5809d8753f0ece9383f5856